parser.output
Terminals unused in grammar

   TOKEN_ERRO


Grammar

    0 $accept: programa $end

    1 programa: %empty
    2         | code

    3 code: type_def ';'
    4     | global_def ';'
    5     | func_dec
    6     | type_def ';' code
    7     | global_def ';' code
    8     | func_dec code

    9 id: TK_IDENTIFICADOR

   10 array: id '[' exp ']'

   11 user_var: id '.' id

   12 int: TK_LIT_INT

   13 int_neg: '-' int

   14 char: TK_LIT_CHAR

   15 false: TK_LIT_FALSE

   16 true: TK_LIT_TRUE

   17 float: TK_LIT_FLOAT

   18 string: TK_LIT_STRING

   19 native_type: TK_PR_INT
   20            | TK_PR_FLOAT
   21            | TK_PR_CHAR
   22            | TK_PR_BOOL
   23            | TK_PR_STRING

   24 type_def: type_def_id '[' type_def_campos ']'

   25 type_def_id: TK_PR_CLASS TK_IDENTIFICADOR

   26 type_def_campos: type_def_campo
   27                | type_def_campo ':' type_def_campos

   28 type_def_campo: type_def_camp_enc native_type TK_IDENTIFICADOR

   29 type_def_camp_enc: TK_PR_PROTECTED
   30                  | TK_PR_PRIVATE
   31                  | TK_PR_PUBLIC

   32 global_def: TK_PR_STATIC global_var
   33           | global_var
   34           | TK_PR_STATIC global_arr
   35           | global_arr

   36 global_var: native_type TK_IDENTIFICADOR
   37           | TK_IDENTIFICADOR TK_IDENTIFICADOR

   38 global_arr: native_type TK_IDENTIFICADOR '[' TK_LIT_INT ']'
   39           | TK_IDENTIFICADOR TK_IDENTIFICADOR '[' TK_LIT_INT ']'

   40 func_dec: func_header block
   41         | TK_PR_STATIC func_header block

   42 func_header: func_id '(' params_dec ')'

   43 func_id: native_type TK_IDENTIFICADOR
   44        | TK_IDENTIFICADOR TK_IDENTIFICADOR

   45 params_dec: %empty
   46           | params_dec_list

   47 params_dec_list: param_dec
   48                | param_dec ',' params_dec_list

   49 param_dec: param_dec_mods native_type TK_IDENTIFICADOR
   50          | param_dec_mods TK_IDENTIFICADOR TK_IDENTIFICADOR

   51 param_dec_mods: %empty
   52               | TK_PR_CONST

   53 block: '{' '}'
   54      | '{' commands '}'

   55 commands: command
   56         | command commands

   57 command: var_dec ';'
   58        | shift_cmd ';'
   59        | assig_cmd ';'
   60        | io_cmd ';'
   61        | func_call ';'
   62        | return_cmd ';'
   63        | break_cmd ';'
   64        | continue_cmd ';'
   65        | case_cmd
   66        | pipe_exp ';'
   67        | do_while ';'
   68        | block ';'
   69        | if_stm
   70        | foreach
   71        | while
   72        | switch
   73        | for

   74 var_dec: var_dec_mods native_type id init_var
   75        | native_type id init_var
   76        | var_dec_mods native_type TK_IDENTIFICADOR
   77        | native_type TK_IDENTIFICADOR
   78        | var_dec_mods TK_IDENTIFICADOR TK_IDENTIFICADOR
   79        | TK_IDENTIFICADOR TK_IDENTIFICADOR

   80 var_dec_mods: TK_PR_STATIC
   81             | TK_PR_CONST
   82             | TK_PR_STATIC TK_PR_CONST

   83 init_var: TK_OC_LE literal
   84         | TK_OC_LE id

   85 literal: int
   86        | '+' int
   87        | int_neg
   88        | float
   89        | '+' float
   90        | '-' float
   91        | false
   92        | true
   93        | char
   94        | string

   95 shift_cmd: id TK_OC_SL int
   96          | id TK_OC_SR int

   97 assig_cmd: id '=' un_plus exp
   98          | array '=' un_plus exp
   99          | user_var '=' un_plus exp

  100 un_plus: %empty
  101        | '+'

  102 io_cmd: TK_PR_INPUT exp
  103       | TK_PR_OUTPUT exps_list

  104 func_call: id '(' params ')'

  105 params: %empty
  106       | params_list

  107 params_list: param
  108            | param ',' params_list

  109 param: exp

  110 return_cmd: TK_PR_RETURN exp

  111 break_cmd: TK_PR_BREAK

  112 continue_cmd: TK_PR_CONTINUE

  113 case_cmd: TK_PR_CASE int ':'
  114         | TK_PR_CASE '+' int ':'
  115         | TK_PR_CASE int_neg ':'

  116 pipe_exp: pipe_pg_step0 func_call
  117         | pipe_pb_step0 func_call
  118         | pipe_pg_step1 func_call
  119         | pipe_pb_step1 func_call

  120 pipe_pg_step0: func_call TK_OC_PG

  121 pipe_pb_step0: func_call TK_OC_PB

  122 pipe_pg_step1: pipe_exp TK_OC_PG

  123 pipe_pb_step1: pipe_exp TK_OC_PB

  124 if_stm: if_exp TK_PR_THEN block
  125       | if_exp TK_PR_THEN block TK_PR_ELSE block

  126 if_exp: TK_PR_IF '(' exp ')'

  127 while: while_begin '(' exp ')' TK_PR_DO block

  128 do_while: do_while_begin block TK_PR_WHILE '(' exp ')'

  129 for: for_begin '(' cmd_list ':' exp ':' cmd_list ')' block

  130 foreach: foreach_begin '(' id ':' exps_list ')' block

  131 switch: switch_begin '(' exp ')' block

  132 foreach_begin: TK_PR_FOREACH

  133 while_begin: TK_PR_WHILE

  134 do_while_begin: TK_PR_DO

  135 for_begin: TK_PR_FOR

  136 switch_begin: TK_PR_SWITCH

  137 cmd_list: cmd
  138         | cmd ',' cmd_list

  139 cmd: var_dec
  140    | shift_cmd
  141    | assig_cmd
  142    | block
  143    | func_call
  144    | return_cmd
  145    | break_cmd
  146    | continue_cmd
  147    | pipe_exp
  148    | if_stm
  149    | foreach
  150    | while
  151    | do_while
  152    | switch
  153    | for

  154 exp: array
  155    | user_var
  156    | id
  157    | func_call
  158    | int
  159    | float
  160    | string
  161    | char
  162    | true
  163    | false
  164    | '(' exp ')'
  165    | logicExp
  166    | arimExp
  167    | compExp
  168    | '-' exp
  169    | '!' exp
  170    | pipe_exp
  171    | '.'

  172 compExp: exp TK_OC_EQ exp
  173        | exp TK_OC_NE exp
  174        | exp TK_OC_GE exp
  175        | exp TK_OC_LE exp
  176        | exp '>' exp
  177        | exp '<' exp

  178 arimExp: exp '+' exp
  179        | exp '-' exp
  180        | exp '/' exp
  181        | exp '*' exp
  182        | exp '%' exp

  183 logicExp: exp TK_OC_AND exp
  184         | exp TK_OC_OR exp

  185 exps_list: exp
  186          | exp ',' exps_list


Terminals, with rules where they appear

$end (0) 0
'!' (33) 169
'%' (37) 182
'(' (40) 42 104 126 127 128 129 130 131 164
')' (41) 42 104 126 127 128 129 130 131 164
'*' (42) 181
'+' (43) 86 89 101 114 178
',' (44) 48 108 138 186
'-' (45) 13 90 168 179
'.' (46) 11 171
'/' (47) 180
':' (58) 27 113 114 115 129 130
';' (59) 3 4 6 7 57 58 59 60 61 62 63 64 66 67 68
'<' (60) 177
'=' (61) 97 98 99
'>' (62) 176
'[' (91) 10 24 38 39
']' (93) 10 24 38 39
'{' (123) 53 54
'}' (125) 53 54
error (256)
TK_PR_INT (258) 19
TK_PR_FLOAT (259) 20
TK_PR_BOOL (260) 22
TK_PR_CHAR (261) 21
TK_PR_STRING (262) 23
TK_PR_IF (263) 126
TK_PR_THEN (264) 124 125
TK_PR_ELSE (265) 125
TK_PR_WHILE (266) 128 133
TK_PR_DO (267) 127 134
TK_PR_INPUT (268) 102
TK_PR_OUTPUT (269) 103
TK_PR_RETURN (270) 110
TK_PR_CONST (271) 52 81 82
TK_PR_STATIC (272) 32 34 41 80 82
TK_PR_FOREACH (273) 132
TK_PR_FOR (274) 135
TK_PR_SWITCH (275) 136
TK_PR_CASE (276) 113 114 115
TK_PR_BREAK (277) 111
TK_PR_CONTINUE (278) 112
TK_PR_CLASS (279) 25
TK_PR_PRIVATE (280) 30
TK_PR_PUBLIC (281) 31
TK_PR_PROTECTED (282) 29
TK_OC_LE (283) 83 84 175
TK_OC_GE (284) 174
TK_OC_EQ (285) 172
TK_OC_NE (286) 173
TK_OC_AND (287) 183
TK_OC_OR (288) 184
TK_OC_SL (289) 95
TK_OC_SR (290) 96
TK_OC_PG (291) 120 122
TK_OC_PB (292) 121 123
TK_LIT_INT (293) 12 38 39
TK_LIT_FLOAT (294) 17
TK_LIT_FALSE (295) 15
TK_LIT_TRUE (296) 16
TK_LIT_CHAR (297) 14
TK_LIT_STRING (298) 18
TK_IDENTIFICADOR (299) 9 25 28 36 37 38 39 43 44 49 50 76 77 78 79
TOKEN_ERRO (300)


Nonterminals, with rules where they appear

$accept (65)
    on left: 0
programa (66)
    on left: 1 2, on right: 0
code (67)
    on left: 3 4 5 6 7 8, on right: 2 6 7 8
id (68)
    on left: 9, on right: 10 11 74 75 84 95 96 97 104 130 156
array (69)
    on left: 10, on right: 98 154
user_var (70)
    on left: 11, on right: 99 155
int (71)
    on left: 12, on right: 13 85 86 95 96 113 114 158
int_neg (72)
    on left: 13, on right: 87 115
char (73)
    on left: 14, on right: 93 161
false (74)
    on left: 15, on right: 91 163
true (75)
    on left: 16, on right: 92 162
float (76)
    on left: 17, on right: 88 89 90 159
string (77)
    on left: 18, on right: 94 160
native_type (78)
    on left: 19 20 21 22 23, on right: 28 36 38 43 49 74 75 76 77
type_def (79)
    on left: 24, on right: 3 6
type_def_id (80)
    on left: 25, on right: 24
type_def_campos (81)
    on left: 26 27, on right: 24 27
type_def_campo (82)
    on left: 28, on right: 26 27
type_def_camp_enc (83)
    on left: 29 30 31, on right: 28
global_def (84)
    on left: 32 33 34 35, on right: 4 7
global_var (85)
    on left: 36 37, on right: 32 33
global_arr (86)
    on left: 38 39, on right: 34 35
func_dec (87)
    on left: 40 41, on right: 5 8
func_header (88)
    on left: 42, on right: 40 41
func_id (89)
    on left: 43 44, on right: 42
params_dec (90)
    on left: 45 46, on right: 42
params_dec_list (91)
    on left: 47 48, on right: 46 48
param_dec (92)
    on left: 49 50, on right: 47 48
param_dec_mods (93)
    on left: 51 52, on right: 49 50
block (94)
    on left: 53 54, on right: 40 41 68 124 125 127 128 129 130 131
    142
commands (95)
    on left: 55 56, on right: 54 56
command (96)
    on left: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73, on right:
    55 56
var_dec (97)
    on left: 74 75 76 77 78 79, on right: 57 139
var_dec_mods (98)
    on left: 80 81 82, on right: 74 76 78
init_var (99)
    on left: 83 84, on right: 74 75
literal (100)
    on left: 85 86 87 88 89 90 91 92 93 94, on right: 83
shift_cmd (101)
    on left: 95 96, on right: 58 140
assig_cmd (102)
    on left: 97 98 99, on right: 59 141
un_plus (103)
    on left: 100 101, on right: 97 98 99
io_cmd (104)
    on left: 102 103, on right: 60
func_call (105)
    on left: 104, on right: 61 116 117 118 119 120 121 143 157
params (106)
    on left: 105 106, on right: 104
params_list (107)
    on left: 107 108, on right: 106 108
param (108)
    on left: 109, on right: 107 108
return_cmd (109)
    on left: 110, on right: 62 144
break_cmd (110)
    on left: 111, on right: 63 145
continue_cmd (111)
    on left: 112, on right: 64 146
case_cmd (112)
    on left: 113 114 115, on right: 65
pipe_exp (113)
    on left: 116 117 118 119, on right: 66 122 123 147 170
pipe_pg_step0 (114)
    on left: 120, on right: 116
pipe_pb_step0 (115)
    on left: 121, on right: 117
pipe_pg_step1 (116)
    on left: 122, on right: 118
pipe_pb_step1 (117)
    on left: 123, on right: 119
if_stm (118)
    on left: 124 125, on right: 69 148
if_exp (119)
    on left: 126, on right: 124 125
while (120)
    on left: 127, on right: 71 150
do_while (121)
    on left: 128, on right: 67 151
for (122)
    on left: 129, on right: 73 153
foreach (123)
    on left: 130, on right: 70 149
switch (124)
    on left: 131, on right: 72 152
foreach_begin (125)
    on left: 132, on right: 130
while_begin (126)
    on left: 133, on right: 127
do_while_begin (127)
    on left: 134, on right: 128
for_begin (128)
    on left: 135, on right: 129
switch_begin (129)
    on left: 136, on right: 131
cmd_list (130)
    on left: 137 138, on right: 129 138
cmd (131)
    on left: 139 140 141 142 143 144 145 146 147 148 149 150 151 152
    153, on right: 137 138
exp (132)
    on left: 154 155 156 157 158 159 160 161 162 163 164 165 166 167
    168 169 170 171, on right: 10 97 98 99 102 109 110 126 127 128
    129 131 164 168 169 172 173 174 175 176 177 178 179 180 181 182
    183 184 185 186
compExp (133)
    on left: 172 173 174 175 176 177, on right: 167
arimExp (134)
    on left: 178 179 180 181 182, on right: 166
logicExp (135)
    on left: 183 184, on right: 165
exps_list (136)
    on left: 185 186, on right: 103 130 186


State 0

    0 $accept: . programa $end

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_STATIC      shift, and go to state 6
    TK_PR_CLASS       shift, and go to state 7
    TK_IDENTIFICADOR  shift, and go to state 8

    $default  reduce using rule 1 (programa)

    programa     go to state 9
    code         go to state 10
    native_type  go to state 11
    type_def     go to state 12
    type_def_id  go to state 13
    global_def   go to state 14
    global_var   go to state 15
    global_arr   go to state 16
    func_dec     go to state 17
    func_header  go to state 18
    func_id      go to state 19


State 1

   19 native_type: TK_PR_INT .

    $default  reduce using rule 19 (native_type)


State 2

   20 native_type: TK_PR_FLOAT .

    $default  reduce using rule 20 (native_type)


State 3

   22 native_type: TK_PR_BOOL .

    $default  reduce using rule 22 (native_type)


State 4

   21 native_type: TK_PR_CHAR .

    $default  reduce using rule 21 (native_type)


State 5

   23 native_type: TK_PR_STRING .

    $default  reduce using rule 23 (native_type)


State 6

   32 global_def: TK_PR_STATIC . global_var
   34           | TK_PR_STATIC . global_arr
   41 func_dec: TK_PR_STATIC . func_header block

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_IDENTIFICADOR  shift, and go to state 8

    native_type  go to state 11
    global_var   go to state 20
    global_arr   go to state 21
    func_header  go to state 22
    func_id      go to state 19


State 7

   25 type_def_id: TK_PR_CLASS . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 23


State 8

   37 global_var: TK_IDENTIFICADOR . TK_IDENTIFICADOR
   39 global_arr: TK_IDENTIFICADOR . TK_IDENTIFICADOR '[' TK_LIT_INT ']'
   44 func_id: TK_IDENTIFICADOR . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 24


State 9

    0 $accept: programa . $end

    $end  shift, and go to state 25


State 10

    2 programa: code .

    $default  reduce using rule 2 (programa)


State 11

   36 global_var: native_type . TK_IDENTIFICADOR
   38 global_arr: native_type . TK_IDENTIFICADOR '[' TK_LIT_INT ']'
   43 func_id: native_type . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 26


State 12

    3 code: type_def . ';'
    6     | type_def . ';' code

    ';'  shift, and go to state 27


State 13

   24 type_def: type_def_id . '[' type_def_campos ']'

    '['  shift, and go to state 28


State 14

    4 code: global_def . ';'
    7     | global_def . ';' code

    ';'  shift, and go to state 29


State 15

   33 global_def: global_var .

    $default  reduce using rule 33 (global_def)


State 16

   35 global_def: global_arr .

    $default  reduce using rule 35 (global_def)


State 17

    5 code: func_dec .
    8     | func_dec . code

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_STATIC      shift, and go to state 6
    TK_PR_CLASS       shift, and go to state 7
    TK_IDENTIFICADOR  shift, and go to state 8

    $default  reduce using rule 5 (code)

    code         go to state 30
    native_type  go to state 11
    type_def     go to state 12
    type_def_id  go to state 13
    global_def   go to state 14
    global_var   go to state 15
    global_arr   go to state 16
    func_dec     go to state 17
    func_header  go to state 18
    func_id      go to state 19


State 18

   40 func_dec: func_header . block

    '{'  shift, and go to state 31

    block  go to state 32


State 19

   42 func_header: func_id . '(' params_dec ')'

    '('  shift, and go to state 33


State 20

   32 global_def: TK_PR_STATIC global_var .

    $default  reduce using rule 32 (global_def)


State 21

   34 global_def: TK_PR_STATIC global_arr .

    $default  reduce using rule 34 (global_def)


State 22

   41 func_dec: TK_PR_STATIC func_header . block

    '{'  shift, and go to state 31

    block  go to state 34


State 23

   25 type_def_id: TK_PR_CLASS TK_IDENTIFICADOR .

    $default  reduce using rule 25 (type_def_id)


State 24

   37 global_var: TK_IDENTIFICADOR TK_IDENTIFICADOR .
   39 global_arr: TK_IDENTIFICADOR TK_IDENTIFICADOR . '[' TK_LIT_INT ']'
   44 func_id: TK_IDENTIFICADOR TK_IDENTIFICADOR .

    '['  shift, and go to state 35

    '('       reduce using rule 44 (func_id)
    $default  reduce using rule 37 (global_var)


State 25

    0 $accept: programa $end .

    $default  accept


State 26

   36 global_var: native_type TK_IDENTIFICADOR .
   38 global_arr: native_type TK_IDENTIFICADOR . '[' TK_LIT_INT ']'
   43 func_id: native_type TK_IDENTIFICADOR .

    '['  shift, and go to state 36

    '('       reduce using rule 43 (func_id)
    $default  reduce using rule 36 (global_var)


State 27

    3 code: type_def ';' .
    6     | type_def ';' . code

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_STATIC      shift, and go to state 6
    TK_PR_CLASS       shift, and go to state 7
    TK_IDENTIFICADOR  shift, and go to state 8

    $default  reduce using rule 3 (code)

    code         go to state 37
    native_type  go to state 11
    type_def     go to state 12
    type_def_id  go to state 13
    global_def   go to state 14
    global_var   go to state 15
    global_arr   go to state 16
    func_dec     go to state 17
    func_header  go to state 18
    func_id      go to state 19


State 28

   24 type_def: type_def_id '[' . type_def_campos ']'

    TK_PR_PRIVATE    shift, and go to state 38
    TK_PR_PUBLIC     shift, and go to state 39
    TK_PR_PROTECTED  shift, and go to state 40

    type_def_campos    go to state 41
    type_def_campo     go to state 42
    type_def_camp_enc  go to state 43


State 29

    4 code: global_def ';' .
    7     | global_def ';' . code

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_STATIC      shift, and go to state 6
    TK_PR_CLASS       shift, and go to state 7
    TK_IDENTIFICADOR  shift, and go to state 8

    $default  reduce using rule 4 (code)

    code         go to state 44
    native_type  go to state 11
    type_def     go to state 12
    type_def_id  go to state 13
    global_def   go to state 14
    global_var   go to state 15
    global_arr   go to state 16
    func_dec     go to state 17
    func_header  go to state 18
    func_id      go to state 19


State 30

    8 code: func_dec code .

    $default  reduce using rule 8 (code)


State 31

   53 block: '{' . '}'
   54      | '{' . commands '}'

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_IF          shift, and go to state 45
    TK_PR_WHILE       shift, and go to state 46
    TK_PR_DO          shift, and go to state 47
    TK_PR_INPUT       shift, and go to state 48
    TK_PR_OUTPUT      shift, and go to state 49
    TK_PR_RETURN      shift, and go to state 50
    TK_PR_CONST       shift, and go to state 51
    TK_PR_STATIC      shift, and go to state 52
    TK_PR_FOREACH     shift, and go to state 53
    TK_PR_FOR         shift, and go to state 54
    TK_PR_SWITCH      shift, and go to state 55
    TK_PR_CASE        shift, and go to state 56
    TK_PR_BREAK       shift, and go to state 57
    TK_PR_CONTINUE    shift, and go to state 58
    TK_IDENTIFICADOR  shift, and go to state 59
    '{'               shift, and go to state 31
    '}'               shift, and go to state 60

    id              go to state 61
    array           go to state 62
    user_var        go to state 63
    native_type     go to state 64
    block           go to state 65
    commands        go to state 66
    command         go to state 67
    var_dec         go to state 68
    var_dec_mods    go to state 69
    shift_cmd       go to state 70
    assig_cmd       go to state 71
    io_cmd          go to state 72
    func_call       go to state 73
    return_cmd      go to state 74
    break_cmd       go to state 75
    continue_cmd    go to state 76
    case_cmd        go to state 77
    pipe_exp        go to state 78
    pipe_pg_step0   go to state 79
    pipe_pb_step0   go to state 80
    pipe_pg_step1   go to state 81
    pipe_pb_step1   go to state 82
    if_stm          go to state 83
    if_exp          go to state 84
    while           go to state 85
    do_while        go to state 86
    for             go to state 87
    foreach         go to state 88
    switch          go to state 89
    foreach_begin   go to state 90
    while_begin     go to state 91
    do_while_begin  go to state 92
    for_begin       go to state 93
    switch_begin    go to state 94


State 32

   40 func_dec: func_header block .

    $default  reduce using rule 40 (func_dec)


State 33

   42 func_header: func_id '(' . params_dec ')'

    TK_PR_CONST  shift, and go to state 95

    ')'       reduce using rule 45 (params_dec)
    $default  reduce using rule 51 (param_dec_mods)

    params_dec       go to state 96
    params_dec_list  go to state 97
    param_dec        go to state 98
    param_dec_mods   go to state 99


State 34

   41 func_dec: TK_PR_STATIC func_header block .

    $default  reduce using rule 41 (func_dec)


State 35

   39 global_arr: TK_IDENTIFICADOR TK_IDENTIFICADOR '[' . TK_LIT_INT ']'

    TK_LIT_INT  shift, and go to state 100


State 36

   38 global_arr: native_type TK_IDENTIFICADOR '[' . TK_LIT_INT ']'

    TK_LIT_INT  shift, and go to state 101


State 37

    6 code: type_def ';' code .

    $default  reduce using rule 6 (code)


State 38

   30 type_def_camp_enc: TK_PR_PRIVATE .

    $default  reduce using rule 30 (type_def_camp_enc)


State 39

   31 type_def_camp_enc: TK_PR_PUBLIC .

    $default  reduce using rule 31 (type_def_camp_enc)


State 40

   29 type_def_camp_enc: TK_PR_PROTECTED .

    $default  reduce using rule 29 (type_def_camp_enc)


State 41

   24 type_def: type_def_id '[' type_def_campos . ']'

    ']'  shift, and go to state 102


State 42

   26 type_def_campos: type_def_campo .
   27                | type_def_campo . ':' type_def_campos

    ':'  shift, and go to state 103

    $default  reduce using rule 26 (type_def_campos)


State 43

   28 type_def_campo: type_def_camp_enc . native_type TK_IDENTIFICADOR

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    native_type  go to state 104


State 44

    7 code: global_def ';' code .

    $default  reduce using rule 7 (code)


State 45

  126 if_exp: TK_PR_IF . '(' exp ')'

    '('  shift, and go to state 105


State 46

  133 while_begin: TK_PR_WHILE .

    $default  reduce using rule 133 (while_begin)


State 47

  134 do_while_begin: TK_PR_DO .

    $default  reduce using rule 134 (do_while_begin)


State 48

  102 io_cmd: TK_PR_INPUT . exp

    TK_LIT_INT        shift, and go to state 106
    TK_LIT_FLOAT      shift, and go to state 107
    TK_LIT_FALSE      shift, and go to state 108
    TK_LIT_TRUE       shift, and go to state 109
    TK_LIT_CHAR       shift, and go to state 110
    TK_LIT_STRING     shift, and go to state 111
    TK_IDENTIFICADOR  shift, and go to state 112
    '-'               shift, and go to state 113
    '!'               shift, and go to state 114
    '.'               shift, and go to state 115
    '('               shift, and go to state 116

    id             go to state 117
    array          go to state 118
    user_var       go to state 119
    int            go to state 120
    char           go to state 121
    false          go to state 122
    true           go to state 123
    float          go to state 124
    string         go to state 125
    func_call      go to state 126
    pipe_exp       go to state 127
    pipe_pg_step0  go to state 79
    pipe_pb_step0  go to state 80
    pipe_pg_step1  go to state 81
    pipe_pb_step1  go to state 82
    exp            go to state 128
    compExp        go to state 129
    arimExp        go to state 130
    logicExp       go to state 131


State 49

  103 io_cmd: TK_PR_OUTPUT . exps_list

    TK_LIT_INT        shift, and go to state 106
    TK_LIT_FLOAT      shift, and go to state 107
    TK_LIT_FALSE      shift, and go to state 108
    TK_LIT_TRUE       shift, and go to state 109
    TK_LIT_CHAR       shift, and go to state 110
    TK_LIT_STRING     shift, and go to state 111
    TK_IDENTIFICADOR  shift, and go to state 112
    '-'               shift, and go to state 113
    '!'               shift, and go to state 114
    '.'               shift, and go to state 115
    '('               shift, and go to state 116

    id             go to state 117
    array          go to state 118
    user_var       go to state 119
    int            go to state 120
    char           go to state 121
    false          go to state 122
    true           go to state 123
    float          go to state 124
    string         go to state 125
    func_call      go to state 126
    pipe_exp       go to state 127
    pipe_pg_step0  go to state 79
    pipe_pb_step0  go to state 80
    pipe_pg_step1  go to state 81
    pipe_pb_step1  go to state 82
    exp            go to state 132
    compExp        go to state 129
    arimExp        go to state 130
    logicExp       go to state 131
    exps_list      go to state 133


State 50

  110 return_cmd: TK_PR_RETURN . exp

    TK_LIT_INT        shift, and go to state 106
    TK_LIT_FLOAT      shift, and go to state 107
    TK_LIT_FALSE      shift, and go to state 108
    TK_LIT_TRUE       shift, and go to state 109
    TK_LIT_CHAR       shift, and go to state 110
    TK_LIT_STRING     shift, and go to state 111
    TK_IDENTIFICADOR  shift, and go to state 112
    '-'               shift, and go to state 113
    '!'               shift, and go to state 114
    '.'               shift, and go to state 115
    '('               shift, and go to state 116

    id             go to state 117
    array          go to state 118
    user_var       go to state 119
    int            go to state 120
    char           go to state 121
    false          go to state 122
    true           go to state 123
    float          go to state 124
    string         go to state 125
    func_call      go to state 126
    pipe_exp       go to state 127
    pipe_pg_step0  go to state 79
    pipe_pb_step0  go to state 80
    pipe_pg_step1  go to state 81
    pipe_pb_step1  go to state 82
    exp            go to state 134
    compExp        go to state 129
    arimExp        go to state 130
    logicExp       go to state 131


State 51

   81 var_dec_mods: TK_PR_CONST .

    $default  reduce using rule 81 (var_dec_mods)


State 52

   80 var_dec_mods: TK_PR_STATIC .
   82             | TK_PR_STATIC . TK_PR_CONST

    TK_PR_CONST  shift, and go to state 135

    $default  reduce using rule 80 (var_dec_mods)


State 53

  132 foreach_begin: TK_PR_FOREACH .

    $default  reduce using rule 132 (foreach_begin)


State 54

  135 for_begin: TK_PR_FOR .

    $default  reduce using rule 135 (for_begin)


State 55

  136 switch_begin: TK_PR_SWITCH .

    $default  reduce using rule 136 (switch_begin)


State 56

  113 case_cmd: TK_PR_CASE . int ':'
  114         | TK_PR_CASE . '+' int ':'
  115         | TK_PR_CASE . int_neg ':'

    TK_LIT_INT  shift, and go to state 106
    '-'         shift, and go to state 136
    '+'         shift, and go to state 137

    int      go to state 138
    int_neg  go to state 139


State 57

  111 break_cmd: TK_PR_BREAK .

    $default  reduce using rule 111 (break_cmd)


State 58

  112 continue_cmd: TK_PR_CONTINUE .

    $default  reduce using rule 112 (continue_cmd)


State 59

    9 id: TK_IDENTIFICADOR .
   79 var_dec: TK_IDENTIFICADOR . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 140

    $default  reduce using rule 9 (id)


State 60

   53 block: '{' '}' .

    $default  reduce using rule 53 (block)


State 61

   10 array: id . '[' exp ']'
   11 user_var: id . '.' id
   95 shift_cmd: id . TK_OC_SL int
   96          | id . TK_OC_SR int
   97 assig_cmd: id . '=' un_plus exp
  104 func_call: id . '(' params ')'

    TK_OC_SL  shift, and go to state 141
    TK_OC_SR  shift, and go to state 142
    '['       shift, and go to state 143
    '.'       shift, and go to state 144
    '('       shift, and go to state 145
    '='       shift, and go to state 146


State 62

   98 assig_cmd: array . '=' un_plus exp

    '='  shift, and go to state 147


State 63

   99 assig_cmd: user_var . '=' un_plus exp

    '='  shift, and go to state 148


State 64

   75 var_dec: native_type . id init_var
   77        | native_type . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 149

    id  go to state 150


State 65

   68 command: block . ';'

    ';'  shift, and go to state 151


State 66

   54 block: '{' commands . '}'

    '}'  shift, and go to state 152


State 67

   55 commands: command .
   56         | command . commands

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_IF          shift, and go to state 45
    TK_PR_WHILE       shift, and go to state 46
    TK_PR_DO          shift, and go to state 47
    TK_PR_INPUT       shift, and go to state 48
    TK_PR_OUTPUT      shift, and go to state 49
    TK_PR_RETURN      shift, and go to state 50
    TK_PR_CONST       shift, and go to state 51
    TK_PR_STATIC      shift, and go to state 52
    TK_PR_FOREACH     shift, and go to state 53
    TK_PR_FOR         shift, and go to state 54
    TK_PR_SWITCH      shift, and go to state 55
    TK_PR_CASE        shift, and go to state 56
    TK_PR_BREAK       shift, and go to state 57
    TK_PR_CONTINUE    shift, and go to state 58
    TK_IDENTIFICADOR  shift, and go to state 59
    '{'               shift, and go to state 31

    $default  reduce using rule 55 (commands)

    id              go to state 61
    array           go to state 62
    user_var        go to state 63
    native_type     go to state 64
    block           go to state 65
    commands        go to state 153
    command         go to state 67
    var_dec         go to state 68
    var_dec_mods    go to state 69
    shift_cmd       go to state 70
    assig_cmd       go to state 71
    io_cmd          go to state 72
    func_call       go to state 73
    return_cmd      go to state 74
    break_cmd       go to state 75
    continue_cmd    go to state 76
    case_cmd        go to state 77
    pipe_exp        go to state 78
    pipe_pg_step0   go to state 79
    pipe_pb_step0   go to state 80
    pipe_pg_step1   go to state 81
    pipe_pb_step1   go to state 82
    if_stm          go to state 83
    if_exp          go to state 84
    while           go to state 85
    do_while        go to state 86
    for             go to state 87
    foreach         go to state 88
    switch          go to state 89
    foreach_begin   go to state 90
    while_begin     go to state 91
    do_while_begin  go to state 92
    for_begin       go to state 93
    switch_begin    go to state 94


State 68

   57 command: var_dec . ';'

    ';'  shift, and go to state 154


State 69

   74 var_dec: var_dec_mods . native_type id init_var
   76        | var_dec_mods . native_type TK_IDENTIFICADOR
   78        | var_dec_mods . TK_IDENTIFICADOR TK_IDENTIFICADOR

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_IDENTIFICADOR  shift, and go to state 155

    native_type  go to state 156


State 70

   58 command: shift_cmd . ';'

    ';'  shift, and go to state 157


State 71

   59 command: assig_cmd . ';'

    ';'  shift, and go to state 158


State 72

   60 command: io_cmd . ';'

    ';'  shift, and go to state 159


State 73
